# fasterr-cnn

./: .gitignore  DATASETS.md  ONNX_TO_TRT_GUIDE.md  PIPELINE.md  analyze_detection.py  bench_single.py  build_375_engine.py  build_int8_calibrated_engine.py  compare_gt.py  convert_onnx_to_engine.py  demo.sh  demo_presentation.py  demo_report.html  download_kitti_subset.py  download_nuimages.py  download_nuimages_uniform.py  download_nuscenes_mini.py  eval_full.py  eval_nuimages.py  eval_nuimages_gt.py  eval_nuscenes.py  eval_precision.py  eval_yolo_sslad.py  fix_all_and_convert.py  fix_onnx_for_trt.py  gt_eval_all.py  infer_video.py  optimize_eval.py  prepare_sslad_300.py  profile_inference.py  remove_if_nodes.py  run_comparison.py  run_kitti_eval.sh  test_pub.py
docs/: Jetson_AGX_Orin硬件优化与推理性能报告.md  kitti_recall_validation_workflow.md  会话记录与工作进度.md  培训文档_ROS2与模型推理部署.md  演示脚本使用说明.md
src/faster_rcnn_ros/: .gitignore  CMakeLists.txt  package.xml
src/faster_rcnn_ros/include/faster_rcnn_ros/: faster_rcnn_detector.hpp
src/faster_rcnn_ros/launch/: faster_rcnn.launch.xml
src/faster_rcnn_ros/models/: benchmark_precisions.sh  build_all_precisions.sh  build_engine.py  fix_onnx_int64.py  labels.txt
src/faster_rcnn_ros/src/: faster_rcnn_detector.cpp  faster_rcnn_node.cpp
src/faster_rcnn_ros/training/: export_onnx.py  extract_weights.py  nuscenes_dataset.py  requirements.txt  train.py  transforms.py
test_images/compare_results/: comparison_summary.json  eval_full_summary.json  eval_nuimages_summary.json  eval_precision_summary.json  gt_eval_summary.json
test_images/sslad_300/: image_list.txt
test_images/sslad_300/labels/: HT_VAL_000001_SH_001.txt  HT_VAL_000017_SH_201.txt  HT_VAL_000034_SZ_000.txt  HT_VAL_000050_SH_012.txt  HT_VAL_000067_GZ_031.txt  HT_VAL_000084_SZ_010.txt  HT_VAL_000101_SZ_000.txt  (+293 more)
